# tapvalidator

./: Dockerfile  Dockerfile-dramatiq  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tapvalidator.py  tox.ini
.github/workflows/: python.yml
requirements/: requirements.txt
src/tapvalidator/: settings.ini  settings.py  tap_validator.py  tapvalidator.py  tasks.py
src/tapvalidator/comparators/: columns.py  protocol.py  votable.py
src/tapvalidator/constants/: database_engines.py  reserved_keywords.py  tap_params.py  vo_fields.py
src/tapvalidator/data/: queries.txt
src/tapvalidator/exceptions/: invalid_mode.py
src/tapvalidator/logger/: logger.py
src/tapvalidator/models/: query.py  result.py  run_mode.py  status.py  tap_service.py  validation_config.py
src/tapvalidator/services/: alerter.py  tap_query.py  tap_query_generator.py
src/tapvalidator/utility/: string_processor.py  xml_parser.py
src/tapvalidator/validators/: availability_validator.py  capabilities_validator.py  protocol.py  table_validator.py  vosi_validator.py  xml_validator.py
src/tests/: common.py  conftest.py  test_models_results.py  test_models_status.py  test_models_tap_service.py  test_string_processor.py
tapvalidator/: pyproject.toml
tapvalidator/tapvalidator/: tapvalidator.py
tests/: common.py  conftest.py  test_actors.py  test_models_query.py  test_string_processor.py  test_tap_validator.py
