[tool.poetry]
name = "tapvalidator"
version = "0.1.0"
description = ""
authors = ["Stelios Voutsinas <steliosvoutsinas@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


[tool.poetry.group.dev.dependencies]
astropy = "5.3.4"
black = "23.10.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.1"
click = "8.1.7"
idna = "3.4"
mypy-extensions = "1.0.0"
numpy = "1.26.1"
packaging = "23.2"
pathspec = "0.11.2"
platformdirs = "3.11.0"
pyerfa = "2.0.1.1"
pyyaml = "6.0.1"
requests = "2.31.0"
urllib3 = "2.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
